FIXED issue - typing long text goes behind elements
* Resolves #323
* Cleaned up SearchBar while I'm at it

--- a/client/stylesheets/react-elements/react-select.less
+++ b/client/stylesheets/react-elements/react-select.less
@@ -51,6 +51,7 @@
 }
 .is-searchable.is-open > .Select-control {
   cursor: text;
+  z-index: 99;
 }
 .is-open > .Select-control {
   border-bottom-right-radius: 0;
@@ -243,7 +244,7 @@
   position: absolute;
   top: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 99;
   -webkit-overflow-scrolling: touch;
 }
 .Select-menu {
